DFHack Future
    Internals:
    Fixes:
    New plugins:
    New scripts:
    Misc improvements:

DFHack 0.40.16-r1
    Internals:
        EventManager should handle INTERACTION triggers a little better. It still can get confused about who did what but only rarely.
        EventManager should no longer trigger REPORT events for old reports after loading a save.
        lua/persist-table.lua: a convenient way of using persistent tables of arbitrary structure and dimension in Lua
    Fixes:
        mousequery: Disabled when linking levers
        stocks: Melting should work now
        scripts/full-heal: Updated with proper argument handling.
        scripts/modtools/reaction-trigger-transition.lua
            should produce the correct syntax now
        scripts/superdwarf.rb should work better now
        scripts/forum-dwarves.lua
            update for new df-structures changes
    New scripts:
        scripts/
            adaptation.rb
                view or set the cavern adaptation level of your citizens
            add-thought.lua
                allows the user to add thoughts to creatures.
            gaydar.lua
                detect the sexual orientation of units on the map
            markdown.lua
                Save a copy of a text screen in markdown (for reddit among others).
            devel/
                all-bob.lua: renames everyone Bob to help test interaction-trigger
    Misc improvements:
        autodump:
            Can now mark a stockpile for auto-dumping (similar to
            automelt and autotrade)
        buildingplan:
            Can now auto-allocate rooms to dwarves with specific positions
            (e.g. expedition leader, mayor)
        dwarfmonitor
            Now displays a weather indicator and date
        lua/syndrome-util.lua
            now you can remove syndromes by SYN_CLASS
        scripts/modtools/add-syndrome.lua
            now you can remove syndromes by SYN_CLASS
        No longer writes empty .history files